# vaeda

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  ruff.toml
doc/: vaeda_scanpy-pbmc3k-tutorial.ipynb
src/vaeda/: PU.py  __init__.py  classifier.py  cluster.py  logger.py  mk_doublets.py  pu.py  vae.py  vaeda.py
tests/: conftest.py  test_vaeda.py
vaeda/: vae.py  vaeda.py
